added the needed directorys

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="DCI Logo">
+        <img src="./img/dci_logo.png" alt="DCI Logo">
         <h1>DCI WebDev Course | Informationssammlung</h1>
     </header>
     
