index inhalte hinzugefügt

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li><a href="">Infos zur "Programmiersprache"</a></li>
                 <li><a href="">Grundstruktur</a></li>
                 <li><a href="">Aufteilung der Seite</a></li>
+                <li><a href="">div's</a></li>
                 <li><a href="">tags</a></li>
             </ul>
         </div>
@@ -47,14 +48,22 @@
         <h3>CSS</h3>
         <div class="lapdown">
             <ul>
-                <li><a href=""></a></li>
+                <li><a href="">Was ist CSS?</a></li>
+                <li><a href="">Einbinden in HTML</a></li>
+                <li><a href="">Schriftoptionen</a></li>
+                <li><a href="">Farben und Hintergründe</a></li>
+                <li><a href="">Rahmen</a></li>
+                <li><a href="">Ausrichtung von Text, Bildern und div's</a></li>
+                <li><a href="">flexbox</a></li>
             </ul>
         </div>
 
         <h3>JavaScript (JS)</h3>
         <div class="lapdown">
             <ul>
-                <li><a href=""></a></li>
+                <li><a href="">console</a></li>
+                <li><a href="">Berechnungen mit JS</a></li>
+                <li><a href="">Elemente aus HTML nutzten</a></li>
             </ul>
         </div>
     </main>
