ankertags on mainpages filled

--- a/index.html
+++ b/index.html
@@ -18,52 +18,52 @@
         <h3>Linux / Ubuntu</h3>
         <div class="lapdown">
             <ul>
-                <li><a href="">Betriebssystem</a></li>
-                <li><a href="">Terminal</a></li>
-                <li><a href="">Terminalbefehle</a></li>
-                <li><a href="">App installation</a></li>
-                <li><a href="">App Updates</a></li>
+                <li><a href="./pages/linux_ubuntu/os.html">Betriebssystem</a></li>
+                <li><a href="./pages/linux_ubuntu/terminal.html">Terminal</a></li>
+                <li><a href="./pages/linux_ubuntu/terminal_comands.html">Terminalbefehle</a></li>
+                <li><a href="./pages/linux_ubuntu/app_instalations.html">App installation</a></li>
+                <li><a href="./pages/linux_ubuntu/app_updates.html">App Updates</a></li>
             </ul>
         </div>
 
         <h3>Visual Studio Code (VSCode)</h3>
         <div class="lapdown">
             <ul>
-                <li><a href="">Funktionen</a></li>
-                <li><a href="">Nötige Extentions</a></li>
+                <li><a href="./pages/vsc/functions.html">Funktionen</a></li>
+                <li><a href="./pages/vsc/extensions.html">Nötige Extentions</a></li>
             </ul>
         </div>
 
         <h3>HTML</h3>
         <div class="lapdown">
             <ul>
-                <li><a href="">Infos zur "Programmiersprache"</a></li>
-                <li><a href="">Grundstruktur</a></li>
-                <li><a href="">Aufteilung der Seite</a></li>
-                <li><a href="">div's</a></li>
-                <li><a href="">tags</a></li>
+                <li><a href="./pages/html/infos.html">Infos zur "Programmiersprache"</a></li>
+                <li><a href="./pages/html/structur.html">Grundstruktur</a></li>
+                <li><a href="./pages/html/siteparts.html">Aufteilung der Seite</a></li>
+                <li><a href="./pages/html/divs.html">div's</a></li>
+                <li><a href="./pages/html/tags.html">tags</a></li>
             </ul>
         </div>
 
         <h3>CSS</h3>
         <div class="lapdown">
             <ul>
-                <li><a href="">Was ist CSS?</a></li>
-                <li><a href="">Einbinden in HTML</a></li>
-                <li><a href="">Schriftoptionen</a></li>
-                <li><a href="">Farben und Hintergründe</a></li>
-                <li><a href="">Rahmen</a></li>
-                <li><a href="">Ausrichtung von Text, Bildern und div's</a></li>
-                <li><a href="">flexbox</a></li>
+                <li><a href="./pages/css/explain_css.html">Was ist CSS?</a></li>
+                <li><a href="./pages/css/into_html.html">Einbinden in HTML</a></li>
+                <li><a href="./pages/css/fonts.html">Schriftoptionen</a></li>
+                <li><a href="./pages/css/colors.html">Farben und Hintergründe</a></li>
+                <li><a href="./pages/css/borders.html">Rahmen</a></li>
+                <li><a href="./pages/css/positions.html">Ausrichtung von Text, Bildern und div's</a></li>
+                <li><a href="./pages/css/felxbox.html">flexbox</a></li>
             </ul>
         </div>
 
         <h3>JavaScript (JS)</h3>
         <div class="lapdown">
             <ul>
-                <li><a href="">console</a></li>
-                <li><a href="">Berechnungen mit JS</a></li>
-                <li><a href="">Elemente aus HTML nutzten</a></li>
+                <li><a href="./pages/js/console.html">console</a></li>
+                <li><a href="./pages/js/calculations.html">Berechnungen mit JS</a></li>
+                <li><a href="./pages/js/elementbyid.html">Elemente aus HTML nutzten</a></li>
             </ul>
         </div>
     </main>
